@@ -157,7 +157,7 @@ fi
 
 dnl Only build the esdplay utility if we find the library, -lauduiofile
 
-AF_LIB=
+dnl AF_LIB=
 ESDPLAY=
 
 AC_ARG_ENABLE(esdplay,
@@ -167,17 +167,20 @@ AC_ARG_ENABLE(esdplay,
 if test xno != x$enable_esdplay ; then
 echo "---------------------------------------------------------------------"
 echo "--- The esdplay utility requires the audiofile library."
-AC_CHECK_LIB(audiofile,afOpenFile,[
-   echo "--- The esdplay utility will be built."
-   AF_LIB="-laudiofile"
-   ESDPLAY=esdplay
-],[
-   echo "--- WARNING: The audiofile library was not found on your system."
-   echo "--- The audiofile library may be obtained from your favourite"
-   echo "--- gnome distribution center, or check the audiofile web page at:"
-   echo "--- http://www.68k.org/~michael/audiofile/"
-   echo "--- The esdplay utility will not be built."
-],-lm)
+AM_PATH_AUDIOFILE(0.1.5, [
+dnl AC_DEFINE(HAVE_LIBAUDIOFILE)
+ESDPLAY=esdplay
+echo "--- The esdplay utility will be built."
+dnl AF_LIB="$AUDIOFILE_LIBS"
+]
+,[
+echo "--- WARNING: The audiofile library was not found on your system."
+echo "--- The audiofile library may be obtained from your favourite"
+echo "--- gnome distribution center, or check the audiofile web page at:"
+echo "--- http://www.68k.org/~michael/audiofile/"
+echo "--- The esdplay utility will not be built."
+])
+
 else
    echo "---------------------------------------------------------------------"
    echo "--- Per configuration request, the esdplay utility will not be built."
@@ -239,7 +242,7 @@ ESD_LIBS=$LIBS
 AC_SUBST(ESD_LIBS)
 
 AC_SUBST(WRAP_LIB)
-AC_SUBST(AF_LIB)
+AC_SUBST(AUDIOFILE_LIBS)
 AC_SUBST(ESDPLAY)
 AC_SUBST(LIBESDDSP)
 AC_SUBST(ESDDSP)
